# ogon

./: .gitignore  CMakeLists.txt  README.md  Readme.md
examples/: simple.cpp
include/: ogon.hpp
include/ogon/: base64.hpp  error.hpp  fwd.hpp  graph.hpp  hyperedge.hpp  literals.hpp  message_stream.hpp  node.hpp  resolver.hpp  schema_parser.hpp  template.hpp  value.hpp  value_serialization.hpp
tests/: test_basic.cpp  test_full_spec.cpp
